<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Exercise3Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/thicknessText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lineThickness" />

        <TextView
            android:id="@+id/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lineColor" />

        <TextView
            android:id="@+id/keyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/arrowKeys" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Spinner
            android:id="@+id/penThicknessSpinner"
            android:layout_width="102dp"
            android:layout_height="101dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/penColorRadioGroup"
            android:layout_width="114dp"
            android:layout_height="99dp"
            android:layout_weight="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <RadioButton
                android:id="@+id/redRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="@string/redColor" />

            <RadioButton
                android:id="@+id/yellowRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/yellowColor" />

            <RadioButton
                android:id="@+id/cyanRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/cyanColor" />
        </RadioGroup>

        <ImageButton
            android:id="@+id/leftButton"
            android:layout_width="43dp"
            android:layout_height="37dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/left"
            app:layout_constraintEnd_toStartOf="@+id/upButton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/penColorRadioGroup"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/transparent" />

        <ImageButton
            android:id="@+id/upButton"
            android:layout_width="43dp"
            android:layout_height="35dp"
            android:src="@drawable/up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/penColorRadioGroup"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/transparent" />

        <ImageButton
            android:id="@+id/downButton"
            android:layout_width="45dp"
            android:layout_height="38dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/down"
            app:layout_constraintEnd_toStartOf="@+id/rightButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/leftButton"
            app:layout_constraintTop_toBottomOf="@+id/upButton"
            app:srcCompat="@android:color/transparent" />

        <ImageButton
            android:id="@+id/rightButton"
            android:layout_width="47dp"
            android:layout_height="39dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.956"
            app:layout_constraintStart_toEndOf="@+id/leftButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/transparent" />

        <Button
            android:id="@+id/clearCanvasButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/clearCanvas"
            app:layout_constraintBottom_toTopOf="@+id/drawingCanvas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/penThicknessSpinner" />

        <TextView
            android:id="@+id/penLocationText"
            android:layout_width="71dp"
            android:layout_height="22dp"
            android:text="asdsfd"
            app:layout_constraintBottom_toTopOf="@+id/drawingCanvas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/clearCanvasButton"
            app:layout_constraintTop_toBottomOf="@+id/penColorRadioGroup"
            app:layout_constraintVertical_bias="0.309" />

        <ImageView
            android:id="@+id/drawingCanvas"
            android:layout_width="408dp"
            android:layout_height="470dp"
            android:layout_marginTop="176dp"
            android:src="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>